--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,16 @@
+.ol-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .thumbnail {
     padding: 10px;
-    background: #ccc;
+    border: 1px solid #ccc;
     margin: 5px;
-    display:inline-block;
+    width: 50%;
+    flex-grow: 1;
+}
+
+.img-box {
+    margin-right: 10px;
 }
